[gd_scene load_steps=10 format=3 uid="uid://c5p5mk2cw6bb0"]

[ext_resource type="Script" path="res://Escenas/Rockola/rockola.gd" id="1_wkc5x"]
[ext_resource type="Texture2D" uid="uid://bbalj1mwrqag6" path="res://Escenas/Rockola/rokola.png" id="2_r1a04"]
[ext_resource type="Texture2D" uid="uid://xemsjtn0mmoe" path="res://Sprites/flecha arriba.png" id="3_wvy2a"]
[ext_resource type="AudioStream" uid="uid://bkqjfs6ij6btk" path="res://Musica/SFX_luisa/Gem Frenzy_SFX_Carbon en chimenea.mp3" id="4_weiw3"]
[ext_resource type="Texture2D" uid="uid://dn6wm2gexlf06" path="res://Escenas/Rockola/notas.png" id="5_fsmp5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_irlbw"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_28dpy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("notasmusica/nota1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("notasmusica/nota2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("notasmusica/nota1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_v0fss"]
resource_name = "musica"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("notasmusica/nota1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("notasmusica/nota1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-11, -10), Vector2(-13, -15), Vector2(-13, -15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("notasmusica/nota1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1.1, 1.1), Vector2(1.1, 1.1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("notasmusica/nota1:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("notasmusica/nota2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("notasmusica/nota2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("notasmusica/nota2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(9, -8), Vector2(11, -12)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("notasmusica/nota2:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("notasmusica/nota1:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_whhp7"]
_data = {
"RESET": SubResource("Animation_28dpy"),
"musica": SubResource("Animation_v0fss")
}

[node name="Rockola" type="Node2D"]
script = ExtResource("1_wkc5x")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.87, 0.87, 0.87, 1)
texture_filter = 1
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_r1a04")

[node name="Spr_up_key_ladder" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_wvy2a")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_irlbw")

[node name="MusicadeFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_weiw3")
volume_db = -9.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_whhp7")
}

[node name="notasmusica" type="Node2D" parent="."]

[node name="nota1" type="Sprite2D" parent="notasmusica"]
visible = false
position = Vector2(-11, -10)
rotation = -0.0977384
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_fsmp5")
hframes = 6

[node name="nota2" type="Sprite2D" parent="notasmusica"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(11, -12)
rotation = 0.15708
texture = ExtResource("5_fsmp5")
hframes = 6
frame = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
